Scrollbar issue fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2793,5 +2793,5 @@ section,
 
 
 ::-webkit-scrollbar{
-  width: 0%;
+  width: 0px;
 }
